# Pulse

./: .env.op  .gitignore  DESIGN.md  pulse.service  pyproject.toml
scripts/: capsule.py  restic.py  system_prompt.py  today.py
src/pulse/: __init__.py  env.py  main.py  otel.py  scheduler.py
src/pulse/jobs/: __init__.py  capsule.py  restic.py  solitude_next.py  system_prompt.py  to_self.py  today.py
src/pulse/jobs/hud/: PLAN.md  __init__.py  calendar.py  todos.py  weather.py
test/: capsule_summary.py  manual_hud.py  observation_flight.md  run_observation_flight.py  test_hud_v2.py  test_olmo_trace.py  test_olmo_trace_v2.py  test_olmo_trace_v3.py  test_olmo_trace_v4.py
