[project]
name = "pulse"
version = "0.1.0"
description = "Alpha's heartbeat - scheduled job runner"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "logfire>=0.50",
    "redis>=5.0",
    "icalendar>=5.0",
    "pendulum>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]
